# DataStructures-Graphs

./: .gitignore  CMakeLists.txt  GraphAlgorithms.h  Graphs.cpp  Graphs.drawio  Graphs.h  README.md  main.cpp  Лаба№2 Графы.docx
src/core/: CMakeLists.txt  GraphAlgorithms.cpp  GraphAlgorithms.h  Graphs.cpp  Graphs.h
src/ui/: CMakeLists.txt  algorithmvisualizer.cpp  algorithmvisualizer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
